Update Bio-ALBERT adapter dependencies to target a correct transformers version

--- a/subtask1/Adapter_for_Bio_ALBERT_Large_MLM.ipynb
+++ b/subtask1/Adapter_for_Bio_ALBERT_Large_MLM.ipynb
@@ -124,7 +124,8 @@
     }
    ],
    "source": [
-    "! pip install datasets transformers adapter-transformers sentencepiece"
+    "!pip install git+https://github.com/adapter-hub/adapter-transformers.git\n",
+    "!pip install datasets sentencepiece"
    ]
   },
   {
@@ -808,9 +809,6 @@
    },
    "outputs": [
     {
-     "metadata": {
-      "tags": null
-     },
      "name": "stderr",
      "output_type": "stream",
      "text": [
